fix encryption enabled css alignment

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -27,8 +27,8 @@ limitations under the License.
     background-color: $dark-panel-bg-color;
     padding: 10px;
     border-radius: 5px;
-    margin: 10px auto;
-    max-width: 75%;
+    margin: 10px 0 10px 65px;
+    display: inline-block;
     box-sizing: border-box;
 }
 
@@ -289,15 +289,9 @@ div.mx_EventTile_notSent.mx_EventTile_redacted .mx_UnknownBody {
     display: inline-block;
     width: 14px;
     height: 14px;
-    top: 29px;
+    top: -19px;
     user-select: none;
     z-index: 1;
-}
-
-.mx_EventTile_continuation .mx_EventTile_readAvatars,
-.mx_EventTile_info .mx_EventTile_readAvatars,
-.mx_EventTile_emote .mx_EventTile_readAvatars {
-    top: 7px;
 }
 
 .mx_EventTile_readAvatars .mx_BaseAvatar {
@@ -632,15 +626,6 @@ div.mx_EventTile_notSent.mx_EventTile_redacted .mx_UnknownBody {
 
     .mx_EventTile_readAvatars {
         top: 27px;
-    }
-
-    .mx_EventTile_continuation .mx_EventTile_readAvatars,
-    .mx_EventTile_emote .mx_EventTile_readAvatars {
-        top: 5px;
-    }
-
-    .mx_EventTile_info .mx_EventTile_readAvatars {
-        top: 4px;
     }
 
     .mx_RoomView_MessageList h2 {
